remove unnecessary generated code

--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -1,13 +1,10 @@
 <md-toolbar layout="row" layout-align="center center" ng-controller="NavbarCtrl">
 
-  <md-button href="https://github.com/Swiip/generator-gulp-angular">Gulp Angular</md-button>
+  <md-button href="#">Dashboard</md-button>
 
   <section flex layout="row" layout-align="left center">
-    <md-button href="#" class="md-raised">Home</md-button>
-    <md-button href="#" class="md-raised">About</md-button>
-    <md-button href="#" class="md-raised">Contact</md-button>
+    <md-button href="#" class="md-raised">md-button 1</md-button>
+    <md-button href="#" class="md-raised">md-button 2</md-button>
+    <md-button href="#" class="md-raised">md-button 3</md-button>
   </section>
-
-  <md-button href="#">Current date: {{ date | date:'yyyy-MM-dd' }}</md-button>
-
 </md-toolbar>
