--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -4,31 +4,23 @@
 
   <md-content>
     <section class="jumbotron">
-      <h1>'Allo, 'Allo!</h1>
-      <p class="lead">
-        <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
-        Always a pleasure scaffolding your apps.
-      </p>
-      <p><a class="btn" ng-href="#">Splendid!</a></p>
+      <h1>Welcome to Angular Material Dashboard</h1>
     </section>
 
-    <div class="techs" layout-align="center">
-      <md-card ng-repeat="awesomeThing in awesomeThings | orderBy:'rank'">
-        <div class="thumbnail">
-          <img class="pull-right" ng-src="assets/images/{{awesomeThing.logo}}" alt="{{awesomeThing.title}}">
-          <div class="caption">
-            <h3>{{awesomeThing.title}}</h3>
-            <p>{{awesomeThing.description}}</p>
-            <p><a ng-href="{{awesomeThing.url}}">{{awesomeThing.url}}</a></p>
-          </div>
-        </div>
+    <div layout-align="center">
+      <md-card>
+        <h3>This is md-card</h3>
+      </md-card>
+
+      <md-card>
+        <md-checkbox>This is md-checkbox</md-checkbox>
       </md-card>
     </div>
   </md-content>
 
   <footer>
     <md-toolbar layout="row" layout-align="center center">
-      <p>With ♥ from <a href="https://twitter.com/Swiip">@Swiip</a></p>
+      <p>This is md-toolbar</p>
     </md-toolbar>
   </footer>
 
