--- a/src/app/main/view/bottomSheet.html
+++ b/src/app/main/view/bottomSheet.html
@@ -1,8 +1,8 @@
 <md-bottom-sheet class="md-grid">
   <md-list>
     <md-item ng-repeat="action in vm.actions">
-      <md-button class="md-grid-item-content" ng-click="vm.performAction(action)">
-        <p class="md-grid-text">{{action.name}}</p>
+      <md-button ng-click="vm.performAction(action)">
+        <p>{{action.name}}</p>
       </md-button>
     </md-item>
   </md-list>
