add search template, countries service, search controller

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -31,8 +31,7 @@
     </md-button>
   </md-toolbar>
 
-  <md-content layout="column" layout-align="center center">
-    <h2>{{vm.title}}</h2>
+  <md-content flex class="md-padding">
     <div ui-view></div>
   </md-content>
 </div>
