--- a/src/app/partials/messages.html
+++ b/src/app/partials/messages.html
@@ -1,1 +1,90 @@
-<h3>messages</h3>
+<!-- TODO: move section element to directive -->
+<md-content style="height: 600px;">
+  <section>
+    <md-subheader class="md-primary">New Orders</md-subheader>
+    <md-list layout="column">
+      <md-item ng-repeat="message in vm.messages">
+        <md-divider></md-divider>
+        <md-item-content>
+          <div flex="10">
+            <img ng-src="{{message.userPhoto}}" alt="{{message.userName}}">
+          </div>
+          <div class="md-tile-content">
+            <h3>{{message.subject}}</h3>
+            <h4>{{message.userName}}</h4>
+            <p>{{message.text}}</p>
+          </div>
+          <div class="md-tile-content">
+            <h4>{{message.date}}</h4>
+          </div>
+        </md-item-content>
+      </md-item>
+    </md-list>
+  </section>
+
+  <section>
+    <md-subheader>Awaiting delivery</md-subheader>
+    <md-list layout="column">
+      <md-item ng-repeat="message in vm.messages">
+        <md-divider></md-divider>
+        <md-item-content>
+          <div flex="10">
+            <img ng-src="{{message.userPhoto}}" alt="{{message.userName}}">
+          </div>
+          <div class="md-tile-content">
+            <h3>{{message.subject}}</h3>
+            <h4>{{message.userName}}</h4>
+            <p>{{message.text}}</p>
+          </div>
+          <div class="md-tile-content">
+            <h4>{{message.date}}</h4>
+          </div>
+        </md-item-content>
+      </md-item>
+    </md-list>
+  </section>
+
+  <section>
+    <md-subheader class="md-accent">Delivered</md-subheader>
+    <md-list layout="column">
+      <md-item ng-repeat="message in vm.messages">
+        <md-divider></md-divider>
+        <md-item-content>
+          <div flex="10">
+            <img ng-src="{{message.userPhoto}}" alt="{{message.userName}}">
+          </div>
+          <div class="md-tile-content">
+            <h3>{{message.subject}}</h3>
+            <h4>{{message.userName}}</h4>
+            <p>{{message.text}}</p>
+          </div>
+          <div class="md-tile-content">
+            <h4>{{message.date}}</h4>
+          </div>
+        </md-item-content>
+      </md-item>
+    </md-list>
+  </section>
+
+  <section>
+    <md-subheader class="md-warn">Problems reported</md-subheader>
+    <md-list layout="column">
+      <md-item ng-repeat="message in vm.messages">
+        <md-divider></md-divider>
+        <md-item-content>
+          <div flex="10">
+            <img ng-src="{{message.userPhoto}}" alt="{{message.userName}}">
+          </div>
+          <div class="md-tile-content">
+            <h3>{{message.subject}}</h3>
+            <h4>{{message.userName}}</h4>
+            <p>{{message.text}}</p>
+          </div>
+          <div class="md-tile-content">
+            <h4>{{message.date}}</h4>
+          </div>
+        </md-item-content>
+      </md-item>
+    </md-list>
+  </section>
+</md-content>
