update search form, remove custom css, update README

--- a/src/app/partials/search.html
+++ b/src/app/partials/search.html
@@ -12,5 +12,8 @@
     <p>Selected country:
       <b>{{vm.selectedCountry.display || 'No country selected'}}</b>
     </p>
+    <p>Country code:
+      <b>{{vm.selectedCountry.code || 'No country selected'}}</b>
+    </p>
   </md-card-content>
 </md-card>
