--- a/src/app/partials/messages.html
+++ b/src/app/partials/messages.html
@@ -1,4 +1,6 @@
 <!-- TODO: move section element to directive -->
+<!-- TODO: replace md-icon to ng-src and fix images paths in build -->
+
 <md-content style="height: 600px;">
   <section>
     <md-subheader class="md-primary">New Orders</md-subheader>
@@ -6,7 +8,7 @@
       <md-item ng-repeat="message in vm.messages">
         <md-divider></md-divider>
         <md-item-content>
-          <img ng-src="{{message.userPhoto}}" alt="{{message.userName}}">
+          <md-icon flex="10" md-svg-icon="user"></md-icon>
           <div class="md-tile-content">
             <h3>{{message.subject}}</h3>
             <h4>{{message.userName}}</h4>
@@ -26,7 +28,7 @@
       <md-item ng-repeat="message in vm.messages">
         <md-divider></md-divider>
         <md-item-content>
-          <img ng-src="{{message.userPhoto}}" alt="{{message.userName}}">
+          <md-icon flex="10" md-svg-icon="user"></md-icon>
           <div class="md-tile-content">
             <h3>{{message.subject}}</h3>
             <h4>{{message.userName}}</h4>
@@ -46,7 +48,7 @@
       <md-item ng-repeat="message in vm.messages">
         <md-divider></md-divider>
         <md-item-content>
-          <img ng-src="{{message.userPhoto}}" alt="{{message.userName}}">
+          <md-icon flex="10" md-svg-icon="user"></md-icon>
           <div class="md-tile-content">
             <h3>{{message.subject}}</h3>
             <h4>{{message.userName}}</h4>
@@ -66,7 +68,7 @@
       <md-item ng-repeat="message in vm.messages">
         <md-divider></md-divider>
         <md-item-content>
-          <img ng-src="{{message.userPhoto}}" alt="{{message.userName}}">
+          <md-icon flex="10" md-svg-icon="user"></md-icon>
           <div class="md-tile-content">
             <h3>{{message.subject}}</h3>
             <h4>{{message.userName}}</h4>
