--- a/src/app/partials/dashboard.html
+++ b/src/app/partials/dashboard.html
@@ -1,6 +1,92 @@
 <h2 class="md-display-2">Material Design Space Center</h2>
 
-<section layout-padding>
+
+<!-- TODO: move section element to directive -->
+<!-- TODO: replace md-icon to ng-src and fix images paths in build -->
+<md-content style="height: 600px;">
+  <section>
+    <md-subheader class="md-primary">New Orders</md-subheader>
+    <md-list layout="column">
+      <md-item ng-repeat="message in vm.messages">
+        <md-divider></md-divider>
+        <md-item-content>
+          <md-icon flex="10" md-svg-icon="user"></md-icon>
+          <div class="md-tile-content">
+            <h3>{{message.subject}}</h3>
+            <h4>{{message.userName}}</h4>
+            <p>{{message.text}}</p>
+          </div>
+          <div class="md-tile-content">
+            <h4>{{message.date}}</h4>
+          </div>
+        </md-item-content>
+      </md-item>
+    </md-list>
+  </section>
+
+  <section>
+    <md-subheader>Awaiting delivery</md-subheader>
+    <md-list layout="column">
+      <md-item ng-repeat="message in vm.messages">
+        <md-divider></md-divider>
+        <md-item-content>
+          <md-icon flex="10" md-svg-icon="user"></md-icon>
+          <div class="md-tile-content">
+            <h3>{{message.subject}}</h3>
+            <h4>{{message.userName}}</h4>
+            <p>{{message.text}}</p>
+          </div>
+          <div class="md-tile-content">
+            <h4>{{message.date}}</h4>
+          </div>
+        </md-item-content>
+      </md-item>
+    </md-list>
+  </section>
+
+  <section>
+    <md-subheader class="md-accent">Delivered</md-subheader>
+    <md-list layout="column">
+      <md-item ng-repeat="message in vm.messages">
+        <md-divider></md-divider>
+        <md-item-content>
+          <md-icon flex="10" md-svg-icon="user"></md-icon>
+          <div class="md-tile-content">
+            <h3>{{message.subject}}</h3>
+            <h4>{{message.userName}}</h4>
+            <p>{{message.text}}</p>
+          </div>
+          <div class="md-tile-content">
+            <h4>{{message.date}}</h4>
+          </div>
+        </md-item-content>
+      </md-item>
+    </md-list>
+  </section>
+
+  <section>
+    <md-subheader class="md-warn">Problems reported</md-subheader>
+    <md-list layout="column">
+      <md-item ng-repeat="message in vm.messages">
+        <md-divider></md-divider>
+        <md-item-content>
+          <md-icon flex="10" md-svg-icon="user"></md-icon>
+          <div class="md-tile-content">
+            <h3>{{message.subject}}</h3>
+            <h4>{{message.userName}}</h4>
+            <p>{{message.text}}</p>
+          </div>
+          <div class="md-tile-content">
+            <h4>{{message.date}}</h4>
+          </div>
+        </md-item-content>
+      </md-item>
+    </md-list>
+  </section>
+</md-content>
+
+
+<md-content layout-padding>
   <md-grid-list flex md-cols="3" md-row-height="3:2" md-gutter="12px">
     <md-grid-tile class="md-whiteframe-z1">
       <md-icon md-svg-icon="svg-6"></md-icon>
@@ -23,9 +109,10 @@
       </md-grid-tile-footer>
     </md-grid-tile>
   </md-grid-list>
-</section>
+</md-content>
 
-<section layout-padding>
+
+<md-content layout-padding>
   <md-progress-linear class="md-warn" md-mode="buffer" value="{{vm.startValue}}"
                       md-buffer-value="{{vm.bufferValue}}"></md-progress-linear>
   <md-whiteframe flex class="md-whiteframe-z1" layout="column" layout-align="center start">
@@ -41,4 +128,29 @@
       Launch rockets!
     </md-button>
   </md-whiteframe>
-</section>
+</md-content>
+
+
+<md-content layout-padding>
+  <md-autocomplete placeholder="Search country for landing"
+                   md-selected-item="vm.selectedCountry"
+                   md-search-text="vm.searchText"
+                   md-items="item in vm.querySearch(vm.searchText)"
+                   md-item-text="item.display">
+    <span md-highlight-text="vm.searchText">{{item.display}}</span>
+    <md-tooltip>
+      Play Music
+    </md-tooltip>
+  </md-autocomplete>
+
+  <md-card>
+    <md-card-content>
+      <p>Selected country:
+        <b>{{vm.selectedCountry.display || 'No country selected'}}</b>
+      </p>
+      <p>Country code:
+        <b>{{vm.selectedCountry.code || 'No country selected'}}</b>
+      </p>
+    </md-card-content>
+  </md-card>
+</md-content>
