reorganize application, add panel-widget directive

--- a/src/app/pages/profile.html
+++ b/src/app/pages/profile.html
@@ -1,5 +1,5 @@
 <!-- TODO: Add validations -->
-<md-content md-theme="docs-dark" class="md-padding" layout="row" layout-sm="column">
+<md-content md-theme="dark" class="md-padding" layout="row" layout-sm="column">
   <md-input-container>
     <label>Username</label>
     <input ng-model="vm.user.title">
