--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -1,5 +1,46 @@
-<h2>Material Design Space Center</h2>
+<!-- TODO: use heading classes after update material to 0.9.0 -->
+<!-- TODO: add tile directive -->
+<md-grid-list layout-margin flex md-cols="3" md-row-height="2:1" md-gutter="12px">
+  <md-grid-tile class="md-whiteframe-z1 blue">
+    <div layout-fill layout="row" layout-align="center" class="md-tile-content">
+      <h2>Over 9000</h2>
+    </div>
+    <md-grid-tile-footer>
+      <div class="md-tile-content" layout="row">
+        <md-icon md-svg-icon="www"></md-icon>
+        <h2 layout-padding>Site visitors</h2>
+      </div>
+    </md-grid-tile-footer>
+  </md-grid-tile>
 
-<panel-widget title="Information panel" template="app/views/partials/infoPanel.html"></panel-widget>
-<panel-widget title="Autocomplete input" template="app/views/partials/autocomplete.html"></panel-widget>
+  <md-grid-tile class="md-whiteframe-z1 orange">
+    <div layout-fill layout="row" layout-align="center" class="md-tile-content">
+      <h2>12</h2>
+    </div>
+    <md-grid-tile-footer>
+      <div class="md-tile-content" layout="row">
+        <md-icon md-svg-icon="notifications"></md-icon>
+        <h2 layout-padding>Warnings</h2>
+      </div>
+    </md-grid-tile-footer>
+  </md-grid-tile>
+
+  <md-grid-tile class="md-whiteframe-z1 green">
+    <div layout-fill layout="row" layout-align="center" class="md-tile-content">
+      <h2>42%</h2>
+    </div>
+    <md-grid-tile-footer>
+      <div class="md-tile-content" layout="row">
+        <md-icon md-svg-icon="memory"></md-icon>
+        <h2 layout-padding>Memory load</h2>
+      </div>
+    </md-grid-tile-footer>
+  </md-grid-tile>
+</md-grid-list>
+
+<div layout="row">
+  <panel-widget flex="50" title="Information panel" template="app/views/partials/infoPanel.html"></panel-widget>
+  <panel-widget flex title="Autocomplete input" template="app/views/partials/autocomplete.html"></panel-widget>
+</div>
+
 <panel-widget title="Messages" template="app/views/partials/messages.html"></panel-widget>
