--- a/src/app/views/partials/autocomplete.html
+++ b/src/app/views/partials/autocomplete.html
@@ -1,5 +1,5 @@
 <md-content ng-controller="SearchController as vm" class="md-padding">
-  <md-autocomplete placeholder="Search country for landing"
+  <md-autocomplete placeholder="Search country"
                    md-selected-item="vm.selectedCountry"
                    md-search-text="vm.searchText"
                    md-items="item in vm.querySearch(vm.searchText)"
