--- a/src/app/views/partials/infoPanel.html
+++ b/src/app/views/partials/infoPanel.html
@@ -1,39 +1,17 @@
 <md-content ng-controller="InfoPanelController as vm" class="md-padding">
-  <md-grid-list flex md-cols="3" md-row-height="3:2" md-gutter="12px">
-    <md-grid-tile class="md-whiteframe-z1">
-      <md-icon md-svg-icon="svg-6"></md-icon>
-      <md-grid-tile-footer>
-        <h3>Houston</h3>
-      </md-grid-tile-footer>
-    </md-grid-tile>
-
-    <md-grid-tile class="md-whiteframe-z1">
-      <md-icon md-svg-icon="svg-7"></md-icon>
-      <md-grid-tile-footer>
-        <h3>Notifications</h3>
-      </md-grid-tile-footer>
-    </md-grid-tile>
-
-    <md-grid-tile class="md-whiteframe-z1">
-      <md-icon md-svg-icon="svg-8"></md-icon>
-      <md-grid-tile-footer>
-        <h3>Spaceship</h3>
-      </md-grid-tile-footer>
-    </md-grid-tile>
-  </md-grid-list>
 
   <md-progress-linear class="md-warn" md-mode="buffer" value="{{vm.startValue}}"
                       md-buffer-value="{{vm.bufferValue}}"></md-progress-linear>
 
-  <md-checkbox aria-label="Checkbox 1" ng-change="vm.checkLaunch()" ng-model="vm.launchToMars">
-    To Mars
+  <md-checkbox aria-label="Checkbox 1" ng-change="vm.checkButton()" ng-model="vm.reloadStaging">
+    Staging server
   </md-checkbox>
 
-  <md-checkbox aria-label="Checkbox 2" ng-change="vm.checkLaunch()" ng-model="vm.launchToVenus">
-    To Venus
+  <md-checkbox aria-label="Checkbox 2" ng-change="vm.checkButton()" ng-model="vm.reloadProduction">
+    Production server
   </md-checkbox>
 
-  <md-button class="md-raised md-primary" ng-disabled="!vm.launchAllowed" ng-click="vm.showAlert()">
-    Launch rockets!
+  <md-button class="md-raised md-primary" ng-disabled="!vm.buttonEnabled" ng-click="vm.showAlert()">
+    Reload servers
   </md-button>
 </md-content>
