Add todolist widget, rework info-panel

--- a/src/app/stylesheets/_custom.scss
+++ b/src/app/stylesheets/_custom.scss
@@ -2,6 +2,10 @@ md-icon {
   height: auto;
 }
 
+.todolist-content {
+ height: 350px;
+}
+
 // DASHBOARD MESSAGES
 .messages {
   position: relative;
