--- a/src/app/views/partials/messages.html
+++ b/src/app/views/partials/messages.html
@@ -9,13 +9,15 @@
           <md-divider></md-divider>
           <md-item-content>
             <md-icon flex="10" md-svg-icon="user"></md-icon>
-            <div class="md-tile-content">
-              <h3>{{message.subject}}</h3>
-              <h4>{{message.userName}}</h4>
-              <p>{{message.text}}</p>
-            </div>
-            <div class="md-tile-content">
-              <h4>{{message.date}}</h4>
+            <div layout="row" flex>
+              <div class="md-tile-content">
+                <h3>{{message.subject}}</h3>
+                <h4>{{message.userName}}</h4>
+                <p>{{message.text}}</p>
+              </div>
+              <div flex="10">
+                <h4>{{message.date}}</h4>
+              </div>
             </div>
           </md-item-content>
         </md-item>
@@ -29,13 +31,15 @@
           <md-divider></md-divider>
           <md-item-content>
             <md-icon flex="10" md-svg-icon="user"></md-icon>
-            <div class="md-tile-content">
-              <h3>{{message.subject}}</h3>
-              <h4>{{message.userName}}</h4>
-              <p>{{message.text}}</p>
-            </div>
-            <div class="md-tile-content">
-              <h4>{{message.date}}</h4>
+            <div layout="row" flex>
+              <div class="md-tile-content">
+                <h3>{{message.subject}}</h3>
+                <h4>{{message.userName}}</h4>
+                <p>{{message.text}}</p>
+              </div>
+              <div flex="10">
+                <h4>{{message.date}}</h4>
+              </div>
             </div>
           </md-item-content>
         </md-item>
@@ -49,13 +53,15 @@
           <md-divider></md-divider>
           <md-item-content>
             <md-icon flex="10" md-svg-icon="user"></md-icon>
-            <div class="md-tile-content">
-              <h3>{{message.subject}}</h3>
-              <h4>{{message.userName}}</h4>
-              <p>{{message.text}}</p>
-            </div>
-            <div class="md-tile-content">
-              <h4>{{message.date}}</h4>
+            <div layout="row" flex>
+              <div class="md-tile-content">
+                <h3>{{message.subject}}</h3>
+                <h4>{{message.userName}}</h4>
+                <p>{{message.text}}</p>
+              </div>
+              <div flex="10">
+                <h4>{{message.date}}</h4>
+              </div>
             </div>
           </md-item-content>
         </md-item>
@@ -69,13 +75,15 @@
           <md-divider></md-divider>
           <md-item-content>
             <md-icon flex="10" md-svg-icon="user"></md-icon>
-            <div class="md-tile-content">
-              <h3>{{message.subject}}</h3>
-              <h4>{{message.userName}}</h4>
-              <p>{{message.text}}</p>
-            </div>
-            <div class="md-tile-content">
-              <h4>{{message.date}}</h4>
+            <div layout="row" flex>
+              <div class="md-tile-content">
+                <h3>{{message.subject}}</h3>
+                <h4>{{message.userName}}</h4>
+                <p>{{message.text}}</p>
+              </div>
+              <div flex="10">
+                <h4>{{message.date}}</h4>
+              </div>
             </div>
           </md-item-content>
         </md-item>
