--- a/src/app/views/partials/messages.html
+++ b/src/app/views/partials/messages.html
@@ -8,16 +8,11 @@
         <md-item ng-repeat="message in vm.messages">
           <md-divider></md-divider>
           <md-item-content>
-            <md-icon flex="10" md-svg-icon="user"></md-icon>
-            <div layout="row" flex>
-              <div class="md-tile-content">
-                <h3>{{message.subject}}</h3>
-                <h4>{{message.userName}}</h4>
-                <p>{{message.text}}</p>
-              </div>
-              <div flex="10">
-                <h4>{{message.date}}</h4>
-              </div>
+            <md-icon flex-gt-md="10" flex="20" md-svg-icon="user"></md-icon>
+            <div class="md-tile-content">
+              <h3>{{message.subject}}</h3>
+              <h4>{{message.userName}}</h4>
+              <p>{{message.text}}</p>
             </div>
           </md-item-content>
         </md-item>
@@ -30,16 +25,11 @@
         <md-item ng-repeat="message in vm.messages">
           <md-divider></md-divider>
           <md-item-content>
-            <md-icon flex="10" md-svg-icon="user"></md-icon>
-            <div layout="row" flex>
-              <div class="md-tile-content">
-                <h3>{{message.subject}}</h3>
-                <h4>{{message.userName}}</h4>
-                <p>{{message.text}}</p>
-              </div>
-              <div flex="10">
-                <h4>{{message.date}}</h4>
-              </div>
+            <md-icon flex-gt-md="10" flex="20" md-svg-icon="user"></md-icon>
+            <div class="md-tile-content">
+              <h3>{{message.subject}}</h3>
+              <h4>{{message.userName}}</h4>
+              <p>{{message.text}}</p>
             </div>
           </md-item-content>
         </md-item>
@@ -52,16 +42,11 @@
         <md-item ng-repeat="message in vm.messages">
           <md-divider></md-divider>
           <md-item-content>
-            <md-icon flex="10" md-svg-icon="user"></md-icon>
-            <div layout="row" flex>
-              <div class="md-tile-content">
-                <h3>{{message.subject}}</h3>
-                <h4>{{message.userName}}</h4>
-                <p>{{message.text}}</p>
-              </div>
-              <div flex="10">
-                <h4>{{message.date}}</h4>
-              </div>
+            <md-icon flex-gt-md="10" flex="20" md-svg-icon="user"></md-icon>
+            <div class="md-tile-content">
+              <h3>{{message.subject}}</h3>
+              <h4>{{message.userName}}</h4>
+              <p>{{message.text}}</p>
             </div>
           </md-item-content>
         </md-item>
@@ -74,16 +59,11 @@
         <md-item ng-repeat="message in vm.messages">
           <md-divider></md-divider>
           <md-item-content>
-            <md-icon flex="10" md-svg-icon="user"></md-icon>
-            <div layout="row" flex>
-              <div class="md-tile-content">
-                <h3>{{message.subject}}</h3>
-                <h4>{{message.userName}}</h4>
-                <p>{{message.text}}</p>
-              </div>
-              <div flex="10">
-                <h4>{{message.date}}</h4>
-              </div>
+            <md-icon flex-gt-md="10" flex="20" md-svg-icon="user"></md-icon>
+            <div class="md-tile-content">
+              <h3>{{message.subject}}</h3>
+              <h4>{{message.userName}}</h4>
+              <p>{{message.text}}</p>
             </div>
           </md-item-content>
         </md-item>
