--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -5,14 +5,25 @@
   </md-toolbar>
   <md-list>
     <md-item ng-repeat="item in vm.menuItems">
-      <md-item-content>
+      <md-item-content layout="row">
         <md-button layout="row" flex ng-click="vm.selectItem(item)"
                    ui-sref-active="md-accent" ui-sref="{{item.sref}}">
-          <div flex="30" class="md-tile-content">
+          <div hide-sm hide-md flex="20" class="md-tile-content">
             <md-icon md-svg-icon="{{item.icon}}"></md-icon>
           </div>
-          <div layout="row" layout-align="start" class="md-tile-content">
+          <div layout="row" class="md-tile-content">
             {{item.name}}
+          </div>
+        </md-button>
+      </md-item-content>
+    </md-item>
+
+    <md-divider hide-gt-md></md-divider>
+    <md-item hide-gt-md>
+      <md-item-content>
+        <md-button flex ng-click="vm.showActions($event)">
+          <div layout="row" class="md-tile-content">
+            Actions
           </div>
         </md-button>
       </md-item-content>
@@ -28,13 +39,13 @@
 
     <h2 class="md-toolbar-tools">{{vm.title}}</h2>
 
-    <md-select layout-fill layout="row" flex='10' placeholder="Admin" ng-model="admin">
+    <md-select hide-sm hide-md layout-fill flex="10" layout="row" placeholder="Admin" ng-model="admin">
       <md-option ui-sref="home.profile" value="1">Profile</md-option>
       <md-option ng-click="vm.showActions($event)" value="2">Actions</md-option>
     </md-select>
 
     <!-- TODO: replace md-icon to ng-src and fix images paths in build -->
-    <md-icon flex="10" md-svg-icon="user"></md-icon>
+    <md-icon hide-sm hide-md flex="10" md-svg-icon="user"></md-icon>
   </md-toolbar>
 
   <md-content flex class="md-padding">
