--- a/src/app/views/table.html
+++ b/src/app/views/table.html
@@ -10,12 +10,12 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="data in vm.tableData">
-        <td data-title="ID">1</td>
+      <tr ng-repeat="data in vm.tableData track by $index">
+        <td data-title="ID">{{$index + 1}}</td>
         <td data-title="Issue">{{data.issue}}</td>
         <td data-title="Status">{{data.status}}</td>
         <td data-title="Progress">
-          <md-progress-linear md-theme={{data.theme}} md-mode="determinate" value={{data.progress}}></md-progress-linear>
+          <md-progress-linear class="table-progress" md-theme={{data.theme}} md-mode="determinate" value={{data.progress}}></md-progress-linear>
         </td>
       </tr>
     </tbody>
