--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -46,7 +46,7 @@
 <div layout-gt-md="row">
   <panel-widget flex-gt-md="60" title="Messages" template="app/views/partials/messages.html"></panel-widget>
   <div layout="column">
-    <panel-widget title="Application Performance" template="app/views/partials/progress.html"></panel-widget>
+    <panel-widget title="Performance" template="app/views/partials/progress.html" options="true"></panel-widget>
     <panel-widget flex title="TODO list" template="app/views/partials/checkboxes.html"></panel-widget>
   </div>
 </div>
