--- a/src/app/views/partials/progress.html
+++ b/src/app/views/partials/progress.html
@@ -1,11 +1,21 @@
-<md-content ng-controller="ProgressController as vm" class="md-padding">
+<div ng-controller="ProgressController as vm" >
+  <md-content ng-show="$showOptions" class="md-padding options">
+    <md-radio-group ng-model="vm.progressPeriod" ng-change="vm.changePeriod()">
+      <md-radio-button  value="week">Last week</md-radio-button>
+      <md-radio-button  value="month">Last month</md-radio-button>
+    </md-radio-group>
+  </md-content>
 
-  <div layout-margin ng-repeat="data in vm.progressData">
-    <div layout="row">
-      <span>{{data.title}}</span>
-      <span flex></span>
-      <span>{{data.value}}%</span>
+  <md-divider></md-divider>
+
+  <md-content class="md-padding">
+    <div layout-margin ng-repeat="data in vm.progressData">
+      <div layout="row">
+        <span>{{data.title}}</span>
+        <span flex></span>
+        <span>{{data.value}}%</span>
+      </div>
+      <md-progress-linear md-theme={{data.theme}} md-mode="determinate" value={{data.value}}></md-progress-linear>
     </div>
-    <md-progress-linear md-theme={{data.theme}} md-mode="determinate" value={{data.value}}></md-progress-linear>
-  </div>
-</md-content>
+  </md-content>
+</div>
