add search options, move data-services to components

--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -40,7 +40,7 @@
 
 <div layout-gt-md="row">
   <panel-widget flex-gt-md="50" title="Information Panel" template="app/views/partials/infoPanel.html"></panel-widget>
-  <panel-widget flex title="Autocomplete Input" template="app/views/partials/autocomplete.html"></panel-widget>
+  <panel-widget flex title="Autocomplete Input" template="app/views/partials/autocomplete.html" options="true"></panel-widget>
 </div>
 
 <div layout-gt-md="row">
