--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -1,7 +1,7 @@
 <md-sidenav md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left"
             class="md-whiteframe-z2 md-sidenav-left">
   <md-toolbar class="md-accent">
-    <h1 class="md-toolbar-tools">Angular Material Admin</h1>
+    <h1 class="md-toolbar-tools">Angular Material Dashboard</h1>
   </md-toolbar>
   <md-list>
     <md-item ng-repeat="item in vm.menuItems">
